--- a/extensions/system/theme/css/theme.css
+++ b/extensions/system/theme/css/theme.css
@@ -7403,6 +7403,11 @@ a.uk-datepicker-table-muted {
 .pk-table-subheading tbody tr th {
   padding-top: 20px;
 }
+/* Sub-modifier `pk-table-selected`
+========================================================================== */
+.pk-table-selected {
+  background: #ffd;
+}
 /* Sub-modifier `pk-table-indent`
 ========================================================================== */
 /*
