--- a/extensions/system/assets/css/system.css
+++ b/extensions/system/assets/css/system.css
@@ -80,7 +80,7 @@
     display: inline-block;
 }
 
-.pk-weather-temperatur {
+.pk-weather-temperature {
     position: absolute;
     top: 0;
     right: -20px;
