--- a/extensions/system/theme/css/theme.css
+++ b/extensions/system/theme/css/theme.css
@@ -5204,8 +5204,10 @@ a.uk-thumbnail:focus {
   animation-fill-mode: both;
 }
 /* Hide animated element if scrollspy is used */
-[data-uk-scrollspy*='uk-animation-'] {
-  opacity: 0;
+@media screen {
+  [data-uk-scrollspy*='uk-animation-'] {
+    opacity: 0;
+  }
 }
 /*
  * Fade
@@ -6660,20 +6662,27 @@ a.uk-thumbnail:focus {
 /* ========================================================================
    Component: Form file
  ========================================================================== */
+/*
+ * 1. Behave like form elements
+ * 2. Create position context for dropdowns
+ * 3. Clip content
+ */
 .uk-form-file {
-  position: relative;
+  /* 1 */
   display: inline-block;
   vertical-align: middle;
+  /* 2 */
+  position: relative;
+  /* 3 */
   overflow: hidden;
 }
 /*
  * 1. Required for Firefox
- * 2. Required for the cursor
+ * 2. Expand height and required for the cursor
  */
 .uk-form-file input[type="file"] {
   position: absolute;
   top: 0;
-  bottom: 0;
   z-index: 1;
   width: 100%;
   opacity: 0;
@@ -6707,6 +6716,40 @@ a.uk-thumbnail:focus {
 }
 .uk-form-password > input {
   padding-right: 50px !important;
+}
+/* ========================================================================
+   Component: Form select
+ ========================================================================== */
+/*
+ * 1. Behave like form elements
+ * 2. Create position context for dropdowns
+ * 3. Clip content
+ */
+.uk-form-select {
+  /* 1 */
+  display: inline-block;
+  vertical-align: middle;
+  /* 2 */
+  position: relative;
+  /* 3 */
+  overflow: hidden;
+}
+/*
+ * 1. Required for Firefox
+ * 1. Required for Webkit to make `height` work
+ */
+.uk-form-select select {
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+  /* 1 */
+  left: 0;
+  /* 2 */
+  -webkit-appearance: none;
 }
 /* ========================================================================
    Component: Placeholder
