--- a/extensions/system/theme/css/theme.css
+++ b/extensions/system/theme/css/theme.css
@@ -3295,8 +3295,9 @@ select.uk-form-width-mini {
  * Modifier: `uk-button-danger`
  */
 .uk-button-danger {
-  background-color: #f5f5f5;
-  color: #444444;
+  background-color: #f0615b;
+  color: #ffffff;
+  border-color: transparent;
 }
 /* Hover */
 .uk-button-danger:hover,
@@ -3357,10 +3358,10 @@ select.uk-form-width-mini {
 /* Size modifiers
  ========================================================================== */
 .uk-button-mini {
-  min-height: 25px;
+  min-height: 22px;
   padding: 0 8px;
-  line-height: 23px;
-  font-size: 11px;
+  line-height: 20px;
+  font-size: 12px;
 }
 .uk-button-small {
   min-height: 30px;
@@ -7398,14 +7399,14 @@ a.uk-datepicker-table-muted {
 /* Option toolbar
 ========================================================================== */
 .pk-options {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid #e5e5e5;
 }
 /* Modifier `pk-breadcrumb`
 ========================================================================== */
 .pk-breadcrumb {
-  margin: -20px 0 30px 0;
+  margin: -10px 0 20px 0;
   font-size: 12px;
 }
 /* Form heading
@@ -7415,6 +7416,30 @@ a.uk-datepicker-table-muted {
   border-bottom: 1px solid #e5e5e5;
   font-size: 18px;
   line-height: 24px;
+}
+/* Sidebar Panels
+========================================================================== */
+.pk-panel-sidebar .uk-panel-title {
+  text-transform: uppercase;
+  font-size: 12px;
+}
+/* Modifier `pk-list-table`
+========================================================================== */
+.pk-list-table {
+  display: table;
+}
+.pk-list-table > li {
+  display: table-row;
+}
+.pk-list-table > li > div {
+  display: table-cell;
+  vertical-align: middle;
+}
+.pk-list-table > li > div:nth-child(n+2) {
+  padding-left: 15px;
+}
+.pk-list-table > li:nth-child(n+2) > div {
+  padding-top: 7px;
 }
 /* Align subnavs if used in navs or sortables
 ========================================================================== */
