made pagekit.css a less file

--- a/extensions/system/theme/less/theme.less
+++ b/extensions/system/theme/less/theme.less
@@ -1,5 +1,5 @@
 @import "uikit/uikit.less";
-@import (less) "../../assets/css/pagekit.css";
+@import "../../assets/less/pagekit.less";
 
 /* ========================================================================
    Theme
