--- a/extensions/system/theme/less/uikit/panel.less
+++ b/extensions/system/theme/less/uikit/panel.less
@@ -8,8 +8,9 @@
 // ========================================================================
 
 @panel-title-margin-bottom:                     @global-margin;
-@panel-title-font-size:                         round(@global-font-size * 1.28); // 18px
-@panel-title-line-height:                       round(@panel-title-font-size * 1.33); // 24px
+@panel-title-font-size:                         round(@global-font-size * 1.14); // 16px
+@panel-title-line-height:                       round(@panel-title-font-size * 1.37); // 22px
+@panel-title-font-weight:                       300;
 @panel-title-color:                             @global-color;
 
 @panel-box-padding:                             @global-margin;
@@ -27,8 +28,8 @@
 @panel-header-title-border:                     @global-border;
 @panel-header-title-color:                      @global-color;
 
-@panel-divider-gutter:                          @global-grid-gutter;
-@panel-divider-gutter-large:                    @global-grid-gutter-large;
+@panel-divider-gutter:                          20px;
+@panel-divider-gutter-large:                    20px;
 @panel-divider-border:                          @global-border;
 
 //
@@ -41,7 +42,9 @@
 // Sub-object: `uk-panel-title`
 // ========================================================================
 
-.hook-panel-title() {}
+.hook-panel-title() {
+	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 
 
 // Sub-object: `uk-panel-badge`
