--- a/extensions/system/theme/less/uikit/panel.less
+++ b/extensions/system/theme/less/uikit/panel.less
@@ -8,10 +8,10 @@
 // ========================================================================
 
 @panel-title-margin-bottom:                     @global-margin;
-@panel-title-font-size:                         round(@global-font-size * 1.14); // 16px
-@panel-title-line-height:                       round(@panel-title-font-size * 1.37); // 22px
-@panel-title-font-weight:                       300;
+@panel-title-font-size:                         round(@global-font-size * 0.85); // 12px
+@panel-title-line-height:                       round(@panel-title-font-size * 1.5); // 18px
 @panel-title-color:                             @global-color;
+@panel-title-text-transform:                    uppercase;
 
 @panel-box-padding:                             @global-margin;
 @panel-box-background:                          @global-background;
@@ -43,7 +43,7 @@
 // ========================================================================
 
 .hook-panel-title() {
-	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 }
 
 
