--- a/extensions/system/assets/less/pagekit.less
+++ b/extensions/system/assets/less/pagekit.less
@@ -11,8 +11,8 @@
     .pk-sidebar-left .pk-panel-marginless { margin-right: -@grid-gutter-horizontal; }
     .pk-sidebar-right .pk-panel-marginless { margin-left: -@grid-gutter-horizontal; }
 
-    .pk-sidebar-left .uk-panel + .uk-panel-divider:before { right: -@grid-gutter-horizontal; }
-    .pk-sidebar-right .uk-panel + .uk-panel-divider:before { left: -@grid-gutter-horizontal; }
+    .pk-sidebar-left .uk-panel + .uk-panel-divider:not(.pk-panel-marginless):before { right: -@grid-gutter-horizontal; }
+    .pk-sidebar-right .uk-panel + .uk-panel-divider:not(.pk-panel-marginless):before { left: -@grid-gutter-horizontal; }
 
 }
 
