updated system uikit theme

--- a/extensions/system/theme/less/uikit/table.less
+++ b/extensions/system/theme/less/uikit/table.less
@@ -12,7 +12,7 @@
 @table-padding-horizontal:                      10px;
 
 @table-caption-color:                           @global-muted-color;
-@table-caption-font-size:                       round(@global-font-size * 0.85); // 12px
+@table-caption-font-size:                       round(@global-font-size * 0.85); // 12px / 14px
 
 @table-striped-background:                      #fafafa;
 
