--- a/extensions/system/theme/less/uikit/panel.less
+++ b/extensions/system/theme/less/uikit/panel.less
@@ -8,8 +8,8 @@
 // ========================================================================
 
 @panel-title-margin-bottom:                     @global-margin;
-@panel-title-font-size:                         round(@global-font-size * 0.85); // 12px
-@panel-title-line-height:                       round(@panel-title-font-size * 1.5); // 18px
+@panel-title-font-size:                         round(@global-font-size * 0.85); // 12px / 14px
+@panel-title-line-height:                       round(@panel-title-font-size *  1.46); // 18px / 20px
 @panel-title-color:                             @global-color;
 @panel-title-text-transform:                    uppercase;
 
@@ -17,7 +17,6 @@
 @panel-box-background:                          @global-background;
 @panel-box-color:                               @global-color;
 @panel-box-title-color:                         @global-color;
-@panel-box-badge-right:                         @panel-box-badge-top;
 
 @panel-box-primary-background:                  @global-default-hover-background;
 @panel-box-primary-color:                       @global-color;
