--- a/extensions/system/theme/less/uikit/tooltip.less
+++ b/extensions/system/theme/less/uikit/tooltip.less
@@ -11,8 +11,8 @@
 @tooltip-background:                            #f0f0f0;
 
 @tooltip-color:                                 @global-color;
-@tooltip-font-size:                             round(@global-font-size * 0.85); // 12px
-@tooltip-line-height:                           round(@tooltip-font-size * 1.5); // 18px
+@tooltip-font-size:                             round(@global-font-size * 0.85); // 12px / 14px
+@tooltip-line-height:                           round(@tooltip-font-size * 1.46); // 18px / 20px
 
 
 // Component
