--- a/themes/alpha/less/uikit/utility.less
+++ b/themes/alpha/less/uikit/utility.less
@@ -7,7 +7,7 @@
 // Variables
 // ========================================================================
 
-@utility-container-max-width:                   900px;
+@utility-container-max-width:                   960px;
 @utility-container-padding-horizontal:          @global-grid-gutter;
 @utility-container-large-max-width:             @utility-container-max-width;
 @utility-container-large-padding-horizontal:    @utility-container-padding-horizontal;
@@ -18,8 +18,8 @@
 @utility-margin:                                @global-margin;
 @utility-margin-large:                          @global-margin-large;
 
-@utility-heading-large-font-size:               round(@global-font-size * 3.71); // 52px
-@utility-heading-large-line-height:             round(@utility-heading-large-font-size * 1.23); // 64px
+@utility-heading-large-font-size:               round(@global-font-size * 3.72); // 52px / 60px
+@utility-heading-large-line-height:             round(@utility-heading-large-font-size * 1.23); // 64px / 74px
 
 @utility-link-muted-color:                      @global-color;
 @utility-link-muted-hover-color:                @global-color;
