--- a/themes/alpha/less/uikit/panel.less
+++ b/themes/alpha/less/uikit/panel.less
@@ -8,8 +8,8 @@
 // ========================================================================
 
 @panel-title-margin-bottom:                     @global-margin;
-@panel-title-font-size:                         round(@global-font-size * 1.28); // 18px
-@panel-title-line-height:                       round(@panel-title-font-size * 1.33); // 24px
+@panel-title-font-size:                         round(@global-font-size * 1.28); // 18px / 20px
+@panel-title-line-height:                       round(@panel-title-font-size * 1.32); // 24px / 26px
 @panel-title-color:                             #333335;
 @panel-title-font-weight:						uppercase;
 
@@ -17,7 +17,6 @@
 @panel-box-background:                          @global-background;
 @panel-box-color:                               @global-color;
 @panel-box-title-color:                         #333335;
-@panel-box-badge-right:                         @panel-box-badge-top;
 
 @panel-box-primary-background:                  @global-default-hover-background;
 @panel-box-primary-color:                       @global-color;
