--- a/extensions/system/theme/less/uikit/addons/notify.less
+++ b/extensions/system/theme/less/uikit/addons/notify.less
@@ -8,7 +8,7 @@
 // ========================================================================
 
 @notify-position:                               50px;
-@notify-z-index:                                (@global-z-index + 40);
+@notify-z-index:                                @global-z-index + 40;
 
 @notify-message-margin-bottom:                  15px;
 @notify-message-background:                     rgba(240,240,240,0.9);
