--- a/extensions/system/theme/less/uikit/dropdown.less
+++ b/extensions/system/theme/less/uikit/dropdown.less
@@ -7,7 +7,7 @@
 // Variables
 // ========================================================================
 
-@dropdown-z-index:                              (@global-z-index + 20);
+@dropdown-z-index:                              @global-z-index + 20;
 @dropdown-padding:                              5px;
 @dropdown-background:                           #fff;
 @dropdown-color:                                @global-color;
@@ -38,7 +38,7 @@
 // ========================================================================
 
 .hook-dropdown-navbar() {
-	min-width: 150px;
+    min-width: 150px;
     width: auto;
     white-space: nowrap;
 }
