--- a/extensions/system/theme/less/uikit/modal.less
+++ b/extensions/system/theme/less/uikit/modal.less
@@ -7,7 +7,7 @@
 // Variables
 // ========================================================================
 
-@modal-z-index:                                 (@global-z-index + 10);
+@modal-z-index:                                 @global-z-index + 10;
 @modal-background:                              rgba(245,245,245,0.8);
 
 @modal-dialog-background:                       @global-background;
