--- a/extensions/system/theme/less/uikit/tooltip.less
+++ b/extensions/system/theme/less/uikit/tooltip.less
@@ -7,7 +7,7 @@
 // Variables
 // ========================================================================
 
-@tooltip-z-index:                               (@global-z-index + 30);
+@tooltip-z-index:                               @global-z-index + 30;
 @tooltip-background:                            #f0f0f0;
 
 @tooltip-color:                                 @global-color;
