fixed overlay markup

--- a/extensions/system/assets/less/pagekit.less
+++ b/extensions/system/assets/less/pagekit.less
@@ -109,6 +109,13 @@
 .pk-subnav-icon > li > a:hover { color: @global-color; }
 
 
+
+/* Sub-modifier `pk-overlay-border`
+========================================================================== */
+
+.pk-overlay-border { border: 1px dashed #ddd; }
+
+
 /* Sub-modifier `pk-table-subheading`
 ========================================================================== */
 
