--- a/extensions/system/theme/less/uikit/overlay.less
+++ b/extensions/system/theme/less/uikit/overlay.less
@@ -20,7 +20,7 @@
 // Sub-object `uk-overlay-area`
 // ========================================================================
 
-.hook-overlay-area() { border: 1px dashed #ddd; }
+.hook-overlay-area() {}
 
 .hook-overlay-area-icon() {}
 
