--- a/extensions/system/theme/css/theme.css
+++ b/extensions/system/theme/css/theme.css
@@ -3126,7 +3126,10 @@ select.uk-form-width-mini {
 .uk-form-stacked .uk-form-label {
   display: block;
   margin-bottom: 5px;
-  font-weight: bold;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 18px;
+  text-transform: uppercase;
 }
 /* Modifier: `uk-form-horizontal`
  * Requires sub-objects: `uk-form-label`, `uk-form-controls`
@@ -3137,7 +3140,10 @@ select.uk-form-width-mini {
   .uk-form-horizontal .uk-form-label {
     display: block;
     margin-bottom: 5px;
-    font-weight: bold;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 18px;
+    text-transform: uppercase;
   }
 }
 /* Desktop and bigger */
@@ -7483,7 +7489,7 @@ a.uk-datepicker-table-muted {
 .pk-subnav-icon > li > a:hover {
   color: #444444;
 }
-/* Sub-modifier `pk-table-subheading`
+/* Sub-modifier `pk-overlay-border`
 ========================================================================== */
 .pk-overlay-border {
   border: 1px dashed #ddd;
@@ -7707,28 +7713,40 @@ a.uk-datepicker-table-muted {
 .pk-finder-table td:nth-child(2) {
   padding-right: 0;
 }
-/*
- * Sub-object `pk-finder-thumbnail`
- */
-.pk-finder-thumbnail {
+/* `pk-thumbnail`
+ ========================================================================== */
+.pk-thumbnail {
   height: 150px;
+  border: 1px solid #e5e5e5;
   background-color: #fafafa;
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: contain;
 }
-.pk-finder-thumbnail-folder {
+/*
+ * Modifier
+ */
+.pk-thumbnail-border-remove .pk-thumbnail {
+  border: none;
+}
+/*
+ * Placeholder
+ */
+.pk-thumbnail-folder {
   background-image: url("../../assets/images/icon-finder-folder.svg");
   background-size: 50px 50px;
 }
-.pk-finder-thumbnail-file {
+.pk-thumbnail-file {
   background-image: url("../../assets/images/icon-finder-file.svg");
   background-size: 50px 50px;
 }
-/*
- * Sub-object `pk-finder-thumbnail-table`
- */
-.pk-finder-thumbnail-table {
+.pk-thumbnail-image {
+  background-image: url("../../assets/images/placeholder-icon.svg");
+  background-size: 50px 50px;
+}
+/* `pk-thumbnail-icon`
+ ========================================================================== */
+.pk-thumbnail-icon {
   display: inline-block;
   width: 15px;
   height: 15px;
