added overflow container for fake tables

--- a/extensions/system/assets/less/pagekit.less
+++ b/extensions/system/assets/less/pagekit.less
@@ -176,6 +176,7 @@
  */
 
 .pk-table-max-width-100 { max-width: 100px; }
+.pk-table-max-width-150 { max-width: 150px; }
 
 
 /* Sub-modifier `pk-table-head-sticky`
