--- a/extensions/system/theme/less/uikit/variables.less
+++ b/extensions/system/theme/less/uikit/variables.less
@@ -53,7 +53,7 @@
 
 @global-hover-background:                       #ffd;
 
-@global-navbar-background:						#fff;
+@global-navbar-background:						#fafafa;
 @global-navbar-color:							#999;
 @global-navbar-hover-color:						#444;
 
