--- a/extensions/system/theme/less/theme.less
+++ b/extensions/system/theme/less/theme.less
@@ -16,10 +16,13 @@ html { overflow-y: scroll; }
  ========================================================================== */
 
 .tm-navbar {
-    margin-bottom: 110px;
+    margin-bottom: 50px;
     border-bottom: 1px solid #e5e5e5;
     background: @navbar-background;
 }
+
+.tm-navbar-margin { margin-bottom: 110px; }
+
 
 /* Option toolbar
 ========================================================================== */
