--- a/extensions/system/theme/less/theme.less
+++ b/extensions/system/theme/less/theme.less
@@ -27,7 +27,7 @@ html { overflow-y: scroll; }
 /* Option toolbar
 ========================================================================== */
 
-.pk-options {
+.tm-toolbar {
     position: absolute;
     top: 71px;
     left: 0;
@@ -47,6 +47,7 @@ html { overflow-y: scroll; }
 }
 
 .tm-dropdown a {
+    display: block;
     color: #444;
     text-align: center;
 }
